# botwork

./: Cargo.toml  LICENSE  README.md
examples/: 01-basics.oduraja  01-expressions.oduraja  02-syntaxes.oduraja  log.oduraja
src/: main.pest  main.rs  parser.rs
src/core/: eval.rs  grammar.rs  mod.rs
