[package]
name = "botwork"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "botwork is a single-binary, generic and open-source automation framework written in Rust for acceptance testing, acceptance test driven development (ATDD), and robotic process automation (RPA). The syntax is basically plain text (in any human lanuage) with parameters. Easily extendible with Rust, Python & JavaScript. An efficient, fast alternative to Robot Framework."
documentation = "https://docs.rs/botwork"
homepage = "https://github.com/nitimis/botwork"
repository = "https://github.com/nitimis/botwork"
readme = "README.md"
keywords = ["botwork", "robotframework", "acceptance", "testing", "ATDD", "rpa", "robotic process automation"]
categories = ["science::robotics", "development-tools", "development-tools::testing"]



[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
pest = "2.5.7"
pest_derive = "2.5.7"
thiserror = "1.0.40"
